[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Sounds.gd" type="Script" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 957.0
margin_bottom = 1080.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer1"]
size = Vector2( 957, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/ViewportContainer1/Viewport"]
current = true
zoom = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )

[node name="sound_player1" type="AudioStreamPlayer" parent="HBoxContainer/ViewportContainer1/Viewport/Camera2D"]
script = ExtResource( 5 )

[node name="ViewportContainer2" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer2"]
size = Vector2( 958, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/ViewportContainer2/Viewport"]
current = true
zoom = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )

[node name="sound_player2" type="AudioStreamPlayer" parent="HBoxContainer/ViewportContainer2/Viewport/Camera2D"]
autoplay = true
script = ExtResource( 5 )

[node name="World" parent="HBoxContainer/ViewportContainer2/Viewport" instance=ExtResource( 1 )]

[node name="LevelLabel" type="RichTextLabel" parent="."]
anchor_left = 0.392
anchor_right = 0.6
anchor_bottom = 0.052
margin_left = 143.36
margin_top = 16.0
margin_right = -64.0
margin_bottom = -8.16
tab_size = 24
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}
